# Synapse

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/example/: meeting_2026_03_15.md  project_helios.md  vector_db_research.md
src/: config.py  graph_store.py  main.py  processor.py  rag_engine.py  vector_store.py
tests/: __init__.py  conftest.py  test_config.py  test_graph_store.py  test_integration.py  test_processor.py  test_rag_engine.py  test_vector_integration.py  test_vector_store.py
