[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "synapse"
version = "0.1.0"
description = "Transform your Markdown notes into an intelligent knowledge base"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    "langchain-ollama>=0.3.0",
    "chromadb>=0.5.0",
    "neo4j>=5.0.0",
    "typer>=0.12.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff",
    "mypy",
    "testcontainers[neo4j]",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []
exclude = [".venv", "tests"]

[tool.mypy]
python_version = "3.11"
strict = true
exclude = ["tests", ".venv"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:testcontainers.*",
]
